// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskCard renders default correctly 1`] = `
<article
  class="task-card"
>
  <header
    class="task-card__header"
  >
    <!---->
     
    <div>
      <h2
        class="task-card__title"
      >
        
          
          
        <!---->
      </h2>
       
      <!---->
    </div>
  </header>
   
  <!---->
   
  <div
    class="task-card__items"
  />
</article>
`;

exports[`TaskCard renders signature example correctly 1`] = `
<div
  class="bg-gray-6 flex items-center justify-center w-full min-h-screen"
>
  <article
    class="task-card"
  >
    <header
      class="task-card__header"
    >
      <div
        class="task-card__icon"
      >
        <svg
          class="fancy-icon"
        />
      </div>
       
      <div>
        <h2
          class="task-card__title"
        >
          
          Documents Awaiting Signature
          
          <div
            class="counter-badge align-middle counter-badge--medium counter-badge--primary"
          >
            
  4

          </div>
        </h2>
         
        <!---->
      </div>
    </header>
     
    <div
      class="task-card__primary-action"
    >
      <button
        class="base-button base-button--primary base-button--medium base-button--regular base-button--inline"
        handler="() => {
          console.log('clicked sign all');
        }"
        type="button"
      >
        <div
          class="base-button__inner"
        >
          <svg
            aria-hidden="true"
            class="base-icon svg-inline--fa fa-pen fa-w-16 base-button__icon base-button__icon--pre"
            data-icon="pen"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class=""
              d="M290.74 93.24l128.02 128.02-277.99 277.99-114.14 12.6C11.35 513.54-1.56 500.62.14 485.34l12.7-114.22 277.9-277.88zm207.2-19.06l-60.11-60.11c-18.75-18.75-49.16-18.75-67.91 0l-56.55 56.55 128.02 128.02 56.55-56.55c18.75-18.76 18.75-49.16 0-67.91z"
              fill="currentColor"
            />
          </svg>
          Sign All
        </div>
      </button>
    </div>
     
    <div
      class="task-card__items"
    >
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
  </article>
</div>
`;

exports[`TaskCard renders signature example correctly 2`] = `
<div
  class="bg-gray-6 flex items-center justify-center w-full min-h-screen"
>
  <article
    class="task-card"
  >
    <header
      class="task-card__header"
    >
      <div
        class="task-card__icon"
      >
        <svg
          class="fancy-icon"
        />
      </div>
       
      <div>
        <h2
          class="task-card__title"
        >
          
          Employment Notices
          
          <div
            class="counter-badge align-middle counter-badge--medium counter-badge--primary"
          >
            
  5

          </div>
        </h2>
         
        <div
          class="task-card__description"
        >
          
          Mandatory notices to employee
        
        </div>
      </div>
    </header>
     
    <div
      class="task-card__primary-action"
    >
      <button
        class="base-button base-button--primary base-button--medium base-button--regular base-button--inline"
        handler="() => {
          console.log('clicked sign all');
        }"
        type="button"
      >
        <div
          class="base-button__inner"
        >
          Acknowledge
        </div>
      </button>
    </div>
     
    <div
      class="task-card__items"
    >
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </div>
  </article>
</div>
`;
